[package]
name = "advent_2023"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day1"
path = "src/bin/day1/day1.rs"

[[bin]]
name = "day2"
path = "src/bin/day2/day2.rs"

[[bin]]
name = "day3"
path = "src/bin/day3/day3.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
